--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/ReservaSala/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/ReservaSala/Edit.cshtml
@@ -61,6 +61,7 @@
                                     <span asp-validation-for="HorarioSalaModel.Objetivo" class="text-danger"></span>
                                 </div>
                                 <input hidden asp-for="HorarioSalaModel.Situacao" value="RESERVADO" />
+                                <input hidden asp-for="HorarioSalaModel.Planejamento"/>
                             </div>
                         </div>
                         <div class="card-footer">
