--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Index.cshtml
@@ -75,9 +75,6 @@
                                             <a href="@Url.Action("Edit", "Planejamento", new { id = item.Id })" class="btn btn-info btn-xs"><i class="fa fa-edit"></i> Editar </a>
                                             <a data-toggle="modal" data-target="#modal-remover-@item.Id" class="btn btn-danger btn-xs text-white"><i class="fa fa-trash"></i> Remover </a>
 
-
-
-
                                             <div class="modal fade" id="modal-remover-@item.Id">
                                                 <div class="modal-dialog modal-sm">
                                                     <div class="modal-content card card-secondary">
@@ -87,21 +84,37 @@
                                                                 <span aria-hidden="true" class="text-white">&times;</span>
                                                             </button>
                                                         </div>
-                                                        <div class="modal-body text-center">
-                                                            <h5>Código</h5><p>@item.Id</p>
-                                                            <h5>Sala</h5> <p>@item.SalaId.Titulo </p>
-                                                            <h5>Período de Tempo</h5> <p>@item.Periodo</p>
-                                                            <h5>Horário</h5> <p>@item.Horario</p>
-                                                        </div>
 
+                                                        <form asp-controller="Planejamento" asp-action="Delete">
+                                                            <div class="modal-body text-center">
+                                                                <h5>Código</h5><p>@item.Id</p>
+                                                                <h5>Sala</h5> <p>@item.SalaId.Titulo </p>
+                                                                <h5>Período de Tempo</h5> <p>@item.Periodo</p>
+                                                                <h5>Horário</h5> <p>@item.Horario</p>
 
-                                                        @using (Html.BeginForm("Delete", "Planejamento", new { id = item.Id }, FormMethod.Post))
-                                                        {
+                                                                <div>
+                                                                    <div class="form-group" hidden>
+                                                                        <input class="form-control" name="id" value="@item.Id" />
+                                                                    </div>
+                                                                    <div class="form-group form-check">
+                                                                        <h5>
+                                                                            <label class="form-check-label" for="excluir-reservas-@item.Id">
+                                                                                Excluir Reservas Associadas ?
+                                                                            </label>
+                                                                        </h5>
+                                                                       
+
+                                                                        <input class="form-control" name="excluirReservas" type="checkbox" checked value="true" id="excluir-reservas-@item.Id" />
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+                                                            <br />
                                                             <div class="modal-footer justify-content-between">
                                                                 <a class="btn btn-danger text-white" data-dismiss="modal">Cancelar</a>
                                                                 <button type="submit" value="Remover" class="btn btn-success">Confimar</button>
                                                             </div>
-                                                        }
+                                                        </form>
                                                     </div>
                                                 </div>
                                             </div>
