--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Bloco/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Bloco/Edit.cshtml
@@ -19,13 +19,13 @@
                             <div class="form-group" hidden>
                                 <input asp-for="Id" class="form-control" />
                             </div>
-                            <div class="form-group" id="ListElements">
+                            <div class="form-group col-md-7" id="ListElements">
                                 <label asp-for="OrganizacaoId" class="control-label"></label>
                                 @Html.DropDownListFor(model => model.OrganizacaoId, ViewBag.OrgList as SelectList, new
                                 { @class = "form-control" })
                                 <span asp-validation-for="OrganizacaoId" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group col-md-4">
                                 <label asp-for="Titulo" class="control-label"></label>
                                 <input asp-for="Titulo" class="form-control" />
                                 <span asp-validation-for="Titulo" class="text-danger"></span>
