Adequando views aos novos campos adicionados na tabela

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeSala/Details.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/HardwareDeSala/Details.cshtml
@@ -28,6 +28,15 @@
                                 <dd>
                                     <p class="form-control">@Html.DisplayFor(model => model.MAC)</p>
                                 </dd>
+                                @if (!string.IsNullOrEmpty(Model.Ip))
+                                {
+                                    <dt>
+                                        @Html.DisplayNameFor(model => model.Ip)
+                                    </dt>
+                                    <dd>
+                                        <p class="form-control">@Html.DisplayFor(model => model.Ip)</p>
+                                    </dd>
+                                }
                                 <dt>
                                     @Html.DisplayNameFor(model => model.SalaId.Titulo)
                                 </dt>
