mostrando nome do usuário no menu lateral, Fix #62

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -7,7 +7,7 @@
 
     if (claimsIdentity != null)
     {
-        nome = claimsIdentity.Claims.Where(s => s.Type == ClaimTypes.Name).Select(s => s.Value).FirstOrDefault();
+        nome = claimsIdentity.Claims.Where(s => s.Type == ClaimTypes.NameIdentifier).Select(s => s.Value).FirstOrDefault();
         role = claimsIdentity.Claims.Where(s => s.Type == ClaimTypes.Role).Select(s => s.Value).FirstOrDefault();
     }
 }
