adicionando Controller Equipamento

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -181,6 +181,12 @@
                             <p>Hardware de Sala</p>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Equipamento" asp-action="Index">
+                            <i class="nav-icon fa fa-tools"></i>
+                            <p>Equipamento de Sala</p>
+                        </a>
+                    </li>
                     <li class="nav-header">COLABORADORES</li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Usuario" asp-action="Index">
