--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Equipamento/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Equipamento/Index.cshtml
@@ -14,7 +14,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h2 class="card-title">
-                                    Hardwares De Sala
+                                    Equipamentos De Sala
                                 </h2>
                                 <a class="btn btn-primary" style="float:right" asp-controller="Equipamento" asp-action="Create">Adicionar Equipamento</a>
 
