--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h2 class="card-title">Cadastrar Novo Planjemento</h2>
+                        <h2 class="card-title">Cadastrar Novo Planejamento</h2>
                     </div>
                     <form asp-action="Create" id="form" name="form">
                         <div class="card-body">
