--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Equipamento/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Equipamento/Edit.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "Edit";
-    var check = "checked";
 }
 
 <section class="content">
@@ -70,19 +69,13 @@
 
                                 <div class="form-group col-md-7">
                                     <label asp-for="EquipamentoModel.TipoEquipamento" class="control-label"></label>
-                                    <select class="form-control" asp-for="EquipamentoModel.TipoEquipamento" id="select-organizacao">
+                                    <select id="tipo" class="form-control" asp-for="EquipamentoModel.TipoEquipamento">
                                         @foreach (var item in ViewBag.Tipos)
                                         {
                                             <option value="@item"> @item</option>
                                         }
                                     </select>
                                     <span asp-validation-for="EquipamentoModel.TipoEquipamento" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="ocupation col-md-5">
-                                <div class="form-group align-element">
-                                    <label title="Código" class="control-label">O equipamento é infravermelho?</label>
-                                    <input type="checkbox" name="checkbox" id="checkbox" value="checkbox" @if (Model.Codigos != null) { @check } />
                                 </div>
                             </div>
                             <div class="ocupation col-md-10">
@@ -186,6 +179,7 @@ else if (TempData["mensagemErro"] != null)
         });
     </script>
 
+    <script src="~/js/equipamento-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
