--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/HardwareDeSala/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/HardwareDeSala/Index.cshtml
@@ -37,7 +37,7 @@
                                     <th>
                                         @Html.DisplayNameFor(model => model.TipoHardwareId.Descricao)
                                     </th>
-                                    <th></th>
+                                    <th>Ações</th>
                                 </tr>
                             </thead>
                             <tbody>
