--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Equipamento/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Equipamento/Create.cshtml
@@ -68,6 +68,17 @@
                                 </div>
 
                                 <div class="form-group col-md-7">
+                                    <label asp-for="EquipamentoModel.HardwareDeSala" class="control-label">Selecione o Atuador associado</label>
+                                    <select id="select-hardware" class="form-control" asp-for="EquipamentoModel.HardwareDeSala">
+                                        @foreach (var item in ViewBag.Hardwares)
+                                        {
+                                            <option value="@item.Id"> @item.MAC</option>
+                                        }
+                                    </select>
+                                    <span asp-validation-for="EquipamentoModel.HardwareDeSala" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group col-md-7">
                                     <label asp-for="EquipamentoModel.TipoEquipamento" class="control-label"></label>
                                     <select id="tipo" class="form-control" asp-for="EquipamentoModel.TipoEquipamento">
                                         @foreach (var item in ViewBag.Tipos)
@@ -157,6 +168,7 @@ else if (TempData["mensagemErro"] != null)
                 document.getElementById("mensagem-retorno").click();
         });
     </script>
+    <script src="~/js/load-itens-script.js"></script>
     <script src="~/js/equipamento-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
