--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Equipamento/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Equipamento/Edit.cshtml
@@ -12,8 +12,11 @@
                     <div class="card-header">
                         <h2 class="card-title">Editar Equipamento</h2>
                     </div>
-                    <form asp-action="Create" id="form" name="form">
+                    <form asp-action="Edit" id="form" name="form">
                         <div class="card-body">
+                            <div class="form-group" hidden>
+                                <input asp-for="EquipamentoModel.Id" class="form-control" />
+                            </div>
                             <div class="form-group col-md-4">
                                 <label asp-for="SalaModel.Titulo" class="control-label"></label>
                                 <input asp-for="SalaModel.Titulo" class="form-control" />
@@ -65,6 +68,21 @@
                                         }
                                     </select>
                                     <span asp-validation-for="EquipamentoModel.Sala" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group col-md-7">
+                                    <label asp-for="EquipamentoModel.HardwareDeSala" class="control-label">Selecione o Atuador associado</label>
+                                    <select id="select-hardware" class="form-control" asp-for="EquipamentoModel.HardwareDeSala">
+                                        @if (Model.HardwareDeSalaModel != null)
+                                        {
+                                            <option selected value="@Model.HardwareDeSalaModel.Id"> @Model.HardwareDeSalaModel.MAC</option>
+                                        }
+                                        @foreach (var item in ViewBag.Hardwares)
+                                        {
+                                            <option value="@item.Id"> @item.MAC</option>
+                                        }
+                                    </select>
+                                    <span asp-validation-for="EquipamentoModel.HardwareDeSala" class="text-danger"></span>
                                 </div>
 
                                 <div class="form-group col-md-7">
@@ -179,6 +197,7 @@ else if (TempData["mensagemErro"] != null)
         });
     </script>
 
+    <script src="~/js/load-itens-script.js"></script>
     <script src="~/js/equipamento-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
